--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
     </main>
     <footer>
-        <p>Projeto final do curso desenvolvido pelo aluno.</p>
+        <p>Projeto final do curso desenvolvido pelo aluno: Jacksom AntÔnio WIedmann Kreff</p>
     </footer>
     <script src="app.js"></script>
     <script src="perguntas.js"></script>
